ndb - bug#47859 - make sure enough buffer is available before copying another table during NR